--- a/work/ILP_005.html
+++ b/work/ILP_005.html
@@ -87,32 +87,32 @@
 
         <ul class="steps flex-ac">
             <li>
-                <span class="step01">1단계</span>
+                <span class="step01">01</span>
                 <strong>약관동의</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li>
-                <span class="step02">2단계</span>
+                <span class="step02">02</span>
                 <strong>본인인증</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li>
-                <span class="step03">3단계</span>
+                <span class="step03">03</span>
                 <strong>신청서 작성</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li>
-                <span class="step04">4단계</span>
+                <span class="step04">04</span>
                 <strong>담당자 등록</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li class="active">
-                <span class="step05">5단계</span>
+                <span class="step05">05</span>
                 <strong>첨부</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li class="disabled">
-                <span class="step06">6단계</span>
+                <span class="step06">06</span>
                 <strong>작성완료</strong>
             </li>
         </ul>
