--- a/work/ILP_031.html
+++ b/work/ILP_031.html
@@ -86,22 +86,22 @@
 
         <ul class="steps flex-acjc">
             <li>
-                <span class="step03">1단계</span>
+                <span class="step03">01</span>
                 <strong>신청서 작성</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li class="active">
-                <span class="step04">2단계</span>
+                <span class="step04">02</span>
                 <strong>담당자 등록</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li class="disabled">
-                <span class="step05">3단계</span>
+                <span class="step05">03</span>
                 <strong>첨부</strong>
             </li>
             <li class="step-arrow disabled"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
             <li class="disabled">
-                <span class="step06">4단계</span>
+                <span class="step06">04</span>
                 <strong>수정완료</strong>
             </li>
         </ul>
