--- a/work/LAP_001.html
+++ b/work/LAP_001.html
@@ -164,19 +164,19 @@
         <ul class="step-list flex-acjc">
             <li class="step step-active">
                 <span class="step-icon step_identity_verification"></span>
-                <span class="step-name">1단계</span>
+                <span class="step-name">01</span>
                 <strong class="step-tit">본인인증</strong>
             </li>
-            <li class="step-arrow lg-only"><img src="../images/biz2/step/step_arrow_next.svg" alt="다음 단계 아이콘"></li>
+            <li class="step-arrow"><img src="../images/biz2/step/step_arrow_next.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-next">
                 <span class="step-icon step_qualification_check"></span>
-                <span class="step-name">2단계</span>
+                <span class="step-name">02</span>
                 <strong class="step-tit">자격확인</strong>
             </li>
-            <li class="step-arrow lg-only"><img src="../images/biz2/step/step_arrow_next.svg" alt="다음 단계 아이콘"></li>
+            <li class="step-arrow"><img src="../images/biz2/step/step_arrow_next.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-next">
                 <span class="step-icon step_application_form"></span>
-                <span class="step-name">3단계</span>
+                <span class="step-name">03</span>
                 <strong class="step-tit">신청서 작성</strong>
             </li>
         </ul>
@@ -215,7 +215,7 @@
                             <label for="b">주민등록번호</label>
                         </th>
                         <td>
-                            <div class="flex-ac gap-10 fixed-value">
+                            <div class="flex-ac gap-10 fixed-value input-idNum">
                                 <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                                 -
                                 <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
