--- a/work/LAP_104.html
+++ b/work/LAP_104.html
@@ -163,36 +163,36 @@
         <ul class="step-list flex-acjc">
             <li class="step step-prev lg-only">
                 <span class="step-icon step_terms_agreement"></span>
-                <span class="step-name">1단계</span>
+                <span class="step-name">01</span>
                 <strong class="step-tit">약관동의</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-prev lg-only">
                 <span class="step-icon step_identity_verification"></span>
-                <span class="step-name">2단계</span>
+                <span class="step-name">02</span>
                 <strong class="step-tit">본인인증 및 자격검증</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-prev">
                 <span class="step-icon step_application_form"></span>
-                <span class="step-name">3단계</span>
+                <span class="step-name">03</span>
                 <strong class="step-tit">신청서 작성</strong>
             </li>
             <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-active">
                 <span class="step-icon step_user_commitment"></span>
-                <span class="step-name">4단계</span>
+                <span class="step-name">04</span>
                 <strong class="step-tit">이용자 서약</strong>
             </li>
             <li class="step-arrow"><img src="../images/biz2/step/step_arrow_next.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-next">
                 <span class="step-icon step_completion"></span>
-                <span class="step-name">5단계</span>
+                <span class="step-name">05</span>
                 <strong class="step-tit">신청완료</strong>
             </li>
         </ul>
         <hr>
-
+        <h2 class="step-title">4. 이용자 서약</h2>
         <div class="conts-header">
             <h3>확약동의서</h3>
         </div> 
@@ -273,24 +273,26 @@
         </div>
     </footer>
     <div class="layer-pop" data-pop="commit-agree">
-        <div class="layer-content" style="--max-width: 1200px">
+        <div class="layer-content">
             <div class="layer-scroll">
                 <span class="title">
-                    [평생교육이용권(평생교육이용권) 신청을 위한 필수 사항 및 이용자 
-                    준수사항 확인에 대한 확약 동의서]
+                    평생교육이용권(평생교육이용권) 신청을 위한 필수 사항 및<br class="lg-only">
+                    이용자 준수사항 확인에 대한 확약 동의서
                 </span>
                 <div class="info-area">
-                    <p class="bullet">평생교육이용권 신청을 위한 필수사항 확인에 관한 사항</p>
+                    <div class="conts-header">
+                        <h3>평생교육이용권 신청을 위한 필수사항 확인에 관한 사항</h3>
+                    </div>
                     <div class="com-write-table">
                         <table>
                             <caption>평생교육이용권 신청을 위한 필수사항 관련 확약</caption>
                             <colgroup>
-                                <col style="width: 336px;">
+                                <col style="width: 190px;">
                                 <col>
                             </colgroup>
                             <tbody>
                                 <tr>
-                                    <th>평생교육이용권 신청을 위한 필수사항 관련 확약</th>
+                                    <th class="txt-l">평생교육이용권 신청을 위한 필수사항 관련 확약</th>
                                     <td>본인은 평생교육이용권 신청 공고를 고지받았으며, 필수적인 서류 누락 및 오제출, 공고 미확인에 따라 발생하는 불이익은 본인에게 있음을 확인하고 확약합니다.</td>
                                 </tr>
                             </tbody>
@@ -300,70 +302,83 @@
                         <table>
                             <caption>확약동의서 신청자 동의</caption>
                             <colgroup>
-                                <col style="width: 270px;">
+                                <col class="sm-col-25" style="width: 190px;">
                                 <col>
-                                <col style="width: 270px;">
-                                <col>
+                                <col class="sm-col-25" style="width: 190px;">
+                                <col>    
                             </colgroup>
                             <tbody>
                                 <tr>
-                                    <th class="txt-c">신청인 성명</th>
+                                    <th class="txt-c sm-txt-l">신청인 성명</th>
                                     <td class="txt-c">홍길동</td>
-                                    <th class="txt-c"><label for="confirm1">확인</label></th>
+                                    <th class="txt-c sm-txt-l"><label for="confirm1">확인</label></th>
                                     <td class="txt-c"><input type="checkbox" id="confirm1"></td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                     <p class="bullet">확인(체크) 시, 본 확약동의서에 대한 서명으로 간주합니다.</p>
-                    <p class="bullet">평생교육이용권 이용자 준수사항에 관한 사항</p>
-                    <div class="agree-box">
-                        <div class="agree-detail">
+                    <div class="conts-header vertical-info">
+                        <h3>평생교육이용권 이용자 준수사항에 관한 사항</h3>
+                        <p>
+                            동 사항을 위반할 경우 평생교육법 제16조의3(평생교육이용권의 사용 등), 제 45조의3(벌칙), 공공재정환수법 
+                            제8조(부정이익등의 환수) 등 관련 법에 따른 처벌, 평생교육이용권 사용 중지, 이용권 회수 또는 지원금 환수, 
+                            차년도 이용권 선정 제한 등이 될 수 있습니다.
+                        </p>
+                    </div>
+                    <div class="layer-agree-box">
+                        <div class="layer-agree-header">
                             <h3 class="txt-c">[이용자 준수사항]</h3>
                         </div>
-                        <div class="agree-detail">
-                            <ol>
-                                <li>
-                                    평생교육이용권은 이용자 본인 사용 및 수강 원칙이며, 가족(배우자, 자녀 포함)을 포함한 제 3자에게 판매·양도·대여할 수 없다.
-                                </li>
-                                <li>
-                                    2024년 개설(시작)하는 성인 대상 평생교육 강좌 수강이외의 다른 목적으로 부당하게 평생교육이용권을 사용해서는 아니된다
-                                    <ul class="bullet-list">
-                                        <li>유아 및 어린이, 청소년 등 만 19세 미만 대상 강좌 이용 불가</li>
-                                        <li>평생교육이용권을 사용한 강좌 수강 없이 교재 단독 구매 불가</li>
-                                        <li>유·무선 전자통신 기기 구매(패키지 및 사은품 등을 통한 제공 포함), 전자교재(PDF, e-book 등) 불가</li>
-                                        <li>이용권 사용처 : 평생교육이용권 사용기관 강좌 수강료 및 해당 강좌 교재비(재료비 사용 불가)</li>
-                                    </ul>
-                                </li>
-                            </ol>
+                        <div class="layer-agree-body">
+                            <div class="agree-detail">
+                                <ul class="num-counter">
+                                    <li>
+                                        평생교육이용권은 이용자 본인 사용 및 수강 원칙이며, 가족(배우자, 자녀 포함)을 포함한 제 3자에게 판매·양도·대여할 수 없다.
+                                    </li>
+                                    <li>
+                                        2024년 개설(시작)하는 성인 대상 평생교육 강좌 수강이외의 다른 목적으로 부당하게 평생교육이용권을 사용해서는 아니된다
+                                        <ul class="bullet-list">
+                                            <li>유아 및 어린이, 청소년 등 만 19세 미만 대상 강좌 이용 불가</li>
+                                            <li>평생교육이용권을 사용한 강좌 수강 없이 교재 단독 구매 불가</li>
+                                            <li>유·무선 전자통신 기기 구매(패키지 및 사은품 등을 통한 제공 포함), 전자교재(PDF, e-book 등) 불가</li>
+                                            <li>이용권 사용처 : 평생교육이용권 사용기관 강좌 수강료 및 해당 강좌 교재비(재료비 사용 불가)</li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        평생교육이용권을 사용할 때, 평생교육강좌 수강을 대신하여 대가성 있는 금전, 물품 등을 제공자로부터 받아서는 아니 된다.
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="conts-header flex-jc-i">
-                        <p>본인은 평생교육이용권 이용자 준수사항에 관한 사항을 고지받았으며, 이에 동의합니다.</p>
                     </div>
                     <div class="com-write-table">
                         <table>
                             <caption>확약동의서 신청자 동의</caption>
                             <colgroup>
-                                <col style="width: 270px;">
+                                <col class="sm-col-25" style="width: 190px;">
                                 <col>
-                                <col style="width: 270px;">
+                                <col class="sm-col-25" style="width: 190px;">
                                 <col>
                             </colgroup>
                             <tbody>
                                 <tr>
-                                    <th class="txt-c">신청인 성명</th>
+                                    <th class="txt-c sm-txt-l">신청인 성명</th>
                                     <td class="txt-c">홍길동</td>
-                                    <th class="txt-c"><label for="confirm2">확인</label></th>
-                                    <td class="txt-c"><input type="checkbox" id="confirm2"></td>
+                                    <th class="txt-c sm-txt-l"><label for="confirm2">확인</label></th>
+                                    <td class="txt-c"><input type="checkbox" id="confirm2" checked></td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                     <p class="bullet">확인(체크) 시, 본 확약동의서에 대한 서명으로 간주합니다.</p>
+                    <p class="layer-agree-date">2024년 10월 11일</p>
+                    <div class="layer-btn-wrap">
+                        <button class="btns" onclick="$('[data-pop=commit-agree]').hide();">확인</button>
+                    </div>
                 </div>
-                <img class="layer-top-logo" src="../images/biz2/footer_link_2.svg" alt="국가평생교육진흥원 로고">
-                <button class="close-btn" onclick="$('[data-pop=study-plan]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+                <img class="layer-top-logo" src="../images/biz2/logo/footer_familylogo_2.svg" alt="국가평생교육진흥원 로고">
+                <button class="close-btn" onclick="$('[data-pop=commit-agree]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
             </div>
         </div>
     </div>
