--- a/work/LAP_105.html
+++ b/work/LAP_105.html
@@ -163,35 +163,36 @@
         <ul class="step-list flex-acjc">
             <li class="step step-prev lg-only">
                 <span class="step-icon step_terms_agreement"></span>
-                <span class="step-name">1단계</span>
+                <span class="step-name">01</span>
                 <strong class="step-tit">약관동의</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-prev lg-only">
                 <span class="step-icon step_identity_verification"></span>
-                <span class="step-name">2단계</span>
+                <span class="step-name">02</span>
                 <strong class="step-tit">본인인증 및 자격검증</strong>
             </li>
             <li class="step-arrow lg-only"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-prev">
                 <span class="step-icon step_application_form"></span>
-                <span class="step-name">3단계</span>
+                <span class="step-name">03</span>
                 <strong class="step-tit">신청서 작성</strong>
             </li>
             <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-prev">
                 <span class="step-icon step_user_commitment"></span>
-                <span class="step-name">4단계</span>
+                <span class="step-name">04</span>
                 <strong class="step-tit">이용자 서약</strong>
             </li>
             <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-active">
                 <span class="step-icon step_completion"></span>
-                <span class="step-name">5단계</span>
+                <span class="step-name">05</span>
                 <strong class="step-tit">신청완료</strong>
             </li>
         </ul>
         <hr>
+        <h2 class="step-title">5. 신청완료</h2>
         <div class="complete-area">
             <div class="complete-wrap border-box">
                 <strong><span class="col-pri">홍길동</span>님의 평생교육이용권 신청이 완료되었습니다.</strong>
