--- a/work/LAP_301.html
+++ b/work/LAP_301.html
@@ -325,10 +325,12 @@
                                             <option value="1">3</option>
                                             <option value="1">4</option>
                                         </select>
-                                        -
-                                        <input type="tel" title="전화번호 중간자리">
-                                        -
-                                        <input type="tel" title="전화번호 끝자리">
+                                        <span class="lg-only">-</span>
+                                        <div class="flex-ac">
+                                            <input type="tel" title="전화번호 중간자리">
+                                            -
+                                            <input type="tel" title="전화번호 끝자리">
+                                        </div>
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk01">
@@ -344,7 +346,7 @@
                                     <div class="flex-ac">
                                         <input type="text" id="email" class="email-id">
                                         @
-                                        <div class="flex-ac">
+                                        <div class="flex-ac input-num">
                                             <input type="text" class="email">
                                             <select>
                                                 <option value="none">직접입력</option>
