--- a/work/LCP_002.html
+++ b/work/LCP_002.html
@@ -185,7 +185,7 @@
                         <td>
                             <div class="flex-ac gap-10 fixed-value">
                                 <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                -
+                                <span>-</span>
                                 <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                             </div>
                         </td>
