--- a/work/LAP_002.html
+++ b/work/LAP_002.html
@@ -163,18 +163,21 @@
         <ul class="step-list flex-acjc">
             <li class="step step-active">
                 <span class="step-icon step_qualification_check"></span>
-                <span class="step-name">1단계</span>
+                <span class="step-name">01</span>
                 <strong class="step-tit">자격확인</strong>
             </li>
             <li class="step-arrow"><img src="../images/biz2/step/step_arrow_next.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-next">
                 <span class="step-icon step_application_form"></span>
-                <span class="step-name">2단계</span>
+                <span class="step-name">02</span>
                 <strong class="step-tit">신청서 작성</strong>
             </li>
         </ul>
 
         <hr>
+
+        <h2 class="step-title">2. 자격 확인</h2>
+
         <div class="conts-header">
             <h3>자격 확인</h3>
         </div>
@@ -199,9 +202,9 @@
                             <label for="b">주민등록번호</label>
                         </th>
                         <td>
-                            <div class="flex-ac fixed-value input-reset">
+                            <div class="flex-ac input-reset">
                                 <input type="text" id="b" maxlength="6" value="901231" readonly>
-                                -
+                                <span>-</span>
                                 <input type="text" id="c" maxlength="7" value="1******" readonly>
                             </div>
                         </td>
