--- a/work/LAP_003.html
+++ b/work/LAP_003.html
@@ -163,17 +163,18 @@
         <ul class="step-list flex-acjc">
             <li class="step step-prev">
                 <span class="step-icon step_qualification_check"></span>
-                <span class="step-name">1단계</span>
+                <span class="step-name">01</span>
                 <strong class="step-tit">자격확인</strong>
             </li>
             <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음 단계 아이콘"></li>
             <li class="step step-active">
                 <span class="step-icon step_application_form"></span>
-                <span class="step-name">2단계</span>
+                <span class="step-name">02</span>
                 <strong class="step-tit">신청서 작성</strong>
             </li>
         </ul>
         <hr>
+        <h2 class="step-title">3. 신청서 작성</h2>
         <div class="conts-header">
             <h3>신청정보</h3>
             <small><em class="col-red">*</em>는 필수사항입니다.</small>
@@ -219,16 +220,18 @@
                         <td class="input-group space">
                             <div class="flex-ac">
                                 <div class="input-num">
-                                    <select id2="tel">
+                                    <select id="tel">
                                         <option value="none">선택</option>
                                         <option value="1">2</option>
                                         <option value="1">3</option>
                                         <option value="1">4</option>
                                     </select>
-                                    -
-                                    <input type="tel" title="전화번호 중간자리">
-                                    -
-                                    <input type="tel" title="전화번호 끝자리">
+                                    <span class="lg-only">-</span>
+                                    <div class="flex-ac">
+                                        <input type="tel" title="전화번호 중간자리">
+                                        -
+                                        <input type="tel" title="전화번호 끝자리">
+                                    </div>
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk02">
@@ -244,7 +247,7 @@
                                 <div class="flex-ac">
                                     <input type="text" id="email" class="email-id">
                                     @
-                                    <div class="flex-ac">
+                                    <div class="flex-ac input-num">
                                         <input type="text" class="email">
                                         <select>
                                             <option value="none">직접입력</option>
