--- a/work/LIP_001.html
+++ b/work/LIP_001.html
@@ -179,8 +179,8 @@
                         </tr>
                         <tr class="address">
                             <th class="txt-l must-type"><label for="address">주소</label></th>
-                            <td class="input-group space">
-                                <div class="flex-ac">
+                            <td>
+                                <div class="flex-ac gap-10">
                                     <input type="text" id="address" class="fixed-width no-border-init" value="04520" readonly>
                                     <button type="button" class="btns bg-blue">주소검색</button>
                                 </div>
@@ -293,10 +293,12 @@
                                             <option value="1">3</option>
                                             <option value="1">4</option>
                                         </select>
-                                        -
-                                        <input type="tel" title="전화번호 중간자리">
-                                        -
-                                        <input type="tel" title="전화번호 끝자리">
+                                        <span class="lg-only">-</span>
+                                        <div class="flex-ac">
+                                            <input type="tel" title="전화번호 중간자리">
+                                            -
+                                            <input type="tel" title="전화번호 끝자리">
+                                        </div>
                                     </div>
                                 </div>
                             </td>
@@ -312,10 +314,12 @@
                                             <option value="1">3</option>
                                             <option value="1">4</option>
                                         </select>
-                                        -
-                                        <input type="tel" title="전화번호 중간자리">
-                                        -
-                                        <input type="tel" title="전화번호 끝자리">
+                                        <span class="lg-only">-</span>
+                                        <div class="flex-ac">
+                                            <input type="tel" title="전화번호 중간자리">
+                                            -
+                                            <input type="tel" title="전화번호 끝자리">
+                                        </div>
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk01">
@@ -331,7 +335,7 @@
                                     <div class="flex-ac">
                                         <input type="text" id="email" class="email-id">
                                         @
-                                        <div class="flex-ac">
+                                        <div class="flex-ac input-num">
                                             <input type="text" class="email">
                                             <select>
                                                 <option value="none">직접입력</option>
