--- a/work/LIP_101.html
+++ b/work/LIP_101.html
@@ -181,33 +181,33 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th>신청서구분분</th>
+                            <th class="txt-l">신청서구분</th>
                             <td class="txt-l">충청남도 평생교육이용권</td>
-                            <th>신청일자</th>
+                            <th class="txt-l">신청일자</th>
                             <td class="txt-l">2024-10-11</td>
                         </tr>
                         <tr>
-                            <th>신청상태</th>
+                            <th class="txt-l">신청상태</th>
                             <td class="txt-l">신청</td>
-                            <th>성명</th>
+                            <th class="txt-l">성명</th>
                             <td class="txt-l">김국*</td>
                         </tr>
                         <tr>
-                            <th>주민등록번호</th>
+                            <th class="txt-l">주민등록번호</th>
                             <td class="txt-l">860611-1******</td>
-                            <th>대상 유형</th>
+                            <th class="txt-l">대상 유형</th>
                             <td class="txt-l">기초생활수급자 <span class="col-blue">(자격)</span></td>
                         </tr>
                         <tr>
-                            <th>주소</th>
+                            <th class="txt-l">주소</th>
                             <td colspan="3" class="txt-l">서울특별시 ****</td>
                         </tr>
                         <tr>
-                            <th>휴대전화번호</th>
+                            <th class="txt-l">휴대전화번호</th>
                             <td colspan="3" class="txt-l">010-0000-****</td>
                         </tr>
                         <tr>
-                            <th>전자우편주소</th>
+                            <th class="txt-l">전자우편주소</th>
                             <td colspan="3" class="txt-l">qwer****@****.com</td>
                         </tr>
                     </tbody>
@@ -217,44 +217,44 @@
                 <table>
                     <caption>신청 정보 테이블</caption>
                     <colgroup>
-                        <col style="width: 200px;">
+                        <col style="width: 114px">
                         <col>
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th>신청서구분</th>
+                            <th class="txt-l">신청서구분</th>
                             <td class="txt-l">충청남도 평생교육이용권</td>
                         </tr>
                         <tr>
-                            <th>신청일자</th>
+                            <th class="txt-l">신청일자</th>
                             <td class="txt-l">2024-10-11</td>
                         </tr>
                         <tr>
-                            <th>신청상태</th>
+                            <th class="txt-l">신청상태</th>
                             <td class="txt-l">신청</td>
                         </tr>
                         <tr>
-                            <th>성명</th>
+                            <th class="txt-l">성명</th>
                             <td class="txt-l">김국*</td>
                         </tr>
                         <tr>
-                            <th>주민등록번호</th>
+                            <th class="txt-l">주민등록번호</th>
                             <td class="txt-l">860611-1******</td>
                         </tr>
                         <tr>
-                            <th>대상 유형</th>
+                            <th class="txt-l">대상 유형</th>
                             <td class="txt-l">기초생활수급자 <span class="col-blue">(자격)</span></td>
                         </tr>
                         <tr>
-                            <th>주소</th>
+                            <th class="txt-l">주소</th>
                             <td class="txt-l">서울특별시 ****</td>
                         </tr>
                         <tr>
-                            <th>휴대전화번호</th>
+                            <th class="txt-l">휴대전화번호</th>
                             <td class="txt-l">010-0000-****</td>
                         </tr>
                         <tr>
-                            <th>전자우편주소</th>
+                            <th class="txt-l">전자우편주소</th>
                             <td class="txt-l">qwer****@****.com</td>
                         </tr>
                     </tbody>
@@ -264,6 +264,229 @@
                 <li>연락두절로 인한 불이익이 없도록 연락이 가능한 휴대전화번호, 이메일 주소 등을 필히 확인 후 신청</li>
                 <li>회원정보 오기재, 미수정, 수신거부, 수신 불가 기종 등으로 인한 미수신은 책임지지 않음</li>
                 <li>추후 휴대전화번호 등이 변경될 경우 평생교육이용권 홈페이지 [연락처 수정] 메뉴를 통한 수정 필수</li>
+            </ul>
+            <div class="conts-header">
+                <h3>건강보험 가입현황</h3>
+                <small><em class="col-red">*</em> 는 필수사항입니다.</small>
+            </div>
+
+            <div class="com-view-table lg-only">
+                <table>
+                    <caption>건강보험 가입현황 테이블</caption>
+                    <colgroup>
+                        <col style="width: 310px;">
+                        <col>
+                        <col style="width: 310px;">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th class="txt-l">신청서구분</th>
+                            <td class="txt-l">완료 평생교육이용권</td>
+                            <th class="txt-l">연계일시</th>
+                            <td class="txt-l">2024-10-11</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">자격여부</th>
+                            <td class="txt-l">미자격</td>
+                            <th class="txt-l">기준연월</th>
+                            <td class="txt-l">2024-01</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">가입자</th>
+                            <td class="txt-l">
+                                <div class="flex-ac chk-box">
+                                    <input type="checkbox" name="01" id="01" />
+                                    <label for="01">본인</label>
+                                    <input type="checkbox" name="02" id="02" />
+                                    <label for="02">본인 외</label>
+                                </div>
+                            </td>
+                            <th class="txt-l">가구원 수(명)</th>
+                            <td class="txt-l">3</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">가입 구분</th>
+                            <td class="txt-l">
+                                <div class="flex-ac chk-box">
+                                    <input type="checkbox" name="03" id="03" />
+                                    <label for="03">직장</label>
+                                    <input type="checkbox" name="04" id="04" />
+                                    <label for="04">지역 외</label>
+                                </div>
+                            </td>
+                            <th class="txt-l">건강보험료 고지금액(원)</th>
+                            <td class="txt-l">23,000</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">비고</th>
+                            <td colspan="3" class="txt-l">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">건강보험 자격확인(통보)서<br>[평생교육이용권 신청자]</th>
+                            <td colspan="3" class="txt-l">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file01" class="file">
+                                    <button type="button" class="btns bg-blue">초기화</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">건강보험자격득실확인서<br>[평생교육이용권 신청자]</th>
+                            <td colspan="3" class="txt-l">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file01" class="file">
+                                    <button type="button" class="btns bg-blue">초기화</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l must-type">건강보험 자격확인(통보)서<br>[건강보험 가입자]</th>
+                            <td colspan="3" class="txt-l">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file01" class="file">
+                                    <button type="button" class="btns bg-blue">초기화</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l must-type">건강보험자격득실확인서<br>[건강보험 가입자]</th>
+                            <td colspan="3" class="txt-l">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file01" class="file">
+                                    <button type="button" class="btns bg-blue">초기화</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">소명자료 입력</th>
+                            <td colspan="3" class="txt-l"><button type="button" class="btns">소명자료 입력</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="com-view-table sm-show-800">
+                <table>
+                    <caption>건강보험 가입현황 테이블</caption>
+                    <colgroup>
+                        <col style="width: 114px">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th class="txt-l">신청서구분</th>
+                            <td class="txt-l">완료 평생교육이용권</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">연계일시</th>
+                            <td class="txt-l">2024-10-11</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">자격여부</th>
+                            <td class="txt-l">미자격</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">기준연월</th>
+                            <td class="txt-l">2024-01</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">가입자</th>
+                            <td class="txt-l">
+                                <div class="flex-ac chk-box">
+                                    <input type="checkbox" name="01" id="01" />
+                                    <label for="01">본인</label>
+                                    <input type="checkbox" name="02" id="02" />
+                                    <label for="02">본인 외</label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">가구원 수(명)</th>
+                            <td class="txt-l">3</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">가입 구분</th>
+                            <td class="txt-l">
+                                <div class="flex-ac chk-box">
+                                    <input type="checkbox" name="01" id="01" />
+                                    <label for="01">직장</label>
+                                    <input type="checkbox" name="02" id="02" />
+                                    <label for="02">지역 외</label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">건강보험료 고지금액(원)</th>
+                            <td class="txt-l">23,000</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">비고</th>
+                            <td class="txt-l">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">건강보험 자격확인(통보)서<br>[평생교육이용권 신청자]</th>
+                            <td class="txt-l file-up-area">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file02" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file02" class="file">
+                                </div>
+                                <button type="button" class="btns bg-blue reset">초기화</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">건강보험자격득실확인서<br>[평생교육이용권 신청자]</th>
+                            <td class="txt-l file-up-area">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file02" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file02" class="file">
+                                </div>
+                                <button type="button" class="btns bg-blue reset">초기화</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l must-type">건강보험 자격확인(통보)서<br>[건강보험 가입자]</th>
+                            <td class="txt-l file-up-area">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file02" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file02" class="file">
+                                </div>
+                                <button type="button" class="btns bg-blue reset">초기화</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l must-type">건강보험자격득실확인서<br>[건강보험 가입자]</th>
+                            <td class="txt-l file-up-area">
+                                <div class="filebox flex-ac">
+                                    <input class="upload-name fixed-value" readonly>
+                                    <label for="file02" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file02" class="file">
+                                </div>
+                                <button type="button" class="btns bg-blue reset">초기화</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">소명자료 입력</th>
+                            <td class="txt-l"><button type="button" class="btns bg-blue">소명자료 입력</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <ul class="bullet-list asterisk-list">
+                <li class="col-red">지정된 증빙자료 외 타 서류 첨부 시 추가 검증 불가.</li>
+                <li>표시된 서류는 신청자 본인이 건강보험 피부양자로 등록되어 있는 경우에 한하여 제출</li>
+                <li>pdf 또는 jpg 파일만 첨부가 가능합니다.</li>
+                <li>첨부된 파일은 저장 버튼 클릭 시, 한번에 저장됩니다.</li>
             </ul>
             <div class="conts-header">
                 <h3>평생학습계좌 연계</h3>
@@ -336,11 +559,11 @@
                 </table>
             </div>
             <ul class="bullet-list asterisk-list">
-                <li>본 평생교육이용권 신청인은 위의 사항을 <span>{#지자체명}</span>으로부터 안내 받았으며 동 사항을 준수할 것을 확인합니다.</li>
+                <li>본 평생교육이용권 신청인은 위의 사항을 <span class="col-red">{#지자체명}</span>으로부터 안내 받았으며 동 사항을 준수할 것을 확인합니다.</li>
             </ul>
         </div>
         <div class="btns-bottom">
-            <a href="javascript:;" class="btns green btn-list">목록</a>
+            <a href="javascript:;" class="btns layer-btn green btn-list" onclick="$('[data-pop=health-status]').show();">목록</a>
             <a href="javascript:;" class="btns btn-bd green btn-list">삭제</a>
             <a href="javascript:;" class="btns btn-bd green btn-list">선정취소</a>
         </div>
@@ -399,5 +622,33 @@
             </div>
         </div>
     </footer>
+    <div class="layer-pop" data-pop="health-status">
+        <div class="layer-content">
+            <div class="layer-scroll">
+                <span class="title">건강보험료 소명결과 입력</span>
+                <div class="info-area">
+                    <div class="com-write-table">
+                        <table>
+                            <caption>건강보험료 소명결과 테이블</caption>
+                            <colgroup>
+                                <col style="width: 190px;">
+                                <col style="width: 190px;">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th class="txt-c">가구원수</th>
+                                    <td>3</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="layer-btn-wrap">
+                        <button class="btns" onclick="$('[data-pop=health-status]').hide();">저장</button>
+                    </div>
+                </div>
+                <button class="close-btn" onclick="$('[data-pop=health-status]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
