--- a/work/LIP_601.html
+++ b/work/LIP_601.html
@@ -172,7 +172,7 @@
                         <tr>
                             <th class="txt-l">신청구분</th>
                             <td>
-                                <div class="radio-box">
+                                <div class="radio-box fixed-value">
                                     <input type="radio" id="rd0101" name="rd01">
                                     <label for="rd0101">전체</label>
                                     <input type="radio" id="rd0102" name="rd01">
@@ -188,15 +188,27 @@
                         </tr>
                         <tr>
                             <th class="txt-l must-type">변경 후 성명</th>
-                            <td><input type="text" value="" /></td>
+                            <td><input type="text" value="" class="fixed-value" /></td>
                         </tr>
                         <tr>
                             <th class="txt-l">변경 전 주민등록번호</th>
-                            <td><input type="number" value="000101" readonly />-<input type="number" value="3******" readonly /></td>
+                            <td>
+                                <div class="input-reset">
+                                    <input type="number" value="000101" size="6" readonly />
+                                    <span>-</span>
+                                    <input type="number" value="3******" size="7" readonly />
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <th class="txt-l must-type">변경 후 주민등록번호</th>
-                            <td><input type="number" value="" />-<input type="number" value="" /></td>
+                            <td>
+                                <div class="input-idNum">
+                                    <input type="number" value="" />
+                                    <span>-</span>
+                                    <input type="number" value="" />
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <th class="txt-l">변경희망일</th>
@@ -205,7 +217,7 @@
                         <tr>
                             <th class="txt-l">파일첨부</th>
                             <td>
-                                <div class="filebox flex-ac">
+                                <div class="filebox flex-ac fixed-value">
                                     <input class="upload-name fixed-value readonly-txt" readonly="">
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
@@ -217,132 +229,73 @@
                     </tbody>
                 </table>
                 <table class="basic-info sm-show-800">
-                    <caption>이의제기 신청정보 입력란</caption>
+                    <caption>개명 및 개번 신청 입력란</caption>
                     <colgroup>
                         <col style="width: auto;">
                         <col>
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">성명</th>
-                            <td>홍길동</td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l">생년월일</th>
-                            <td>1976년 08월 08일</td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l">주소</th>
-                            <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l"><label for="tel">휴대전화번호</label></th>
-                            <td class="input-group space">
-                                <div class="flex-ac">
-                                    <div class="input-num">
-                                        <select id="tel">
-                                            <option value="none">선택</option>
-                                            <option value="1">2</option>
-                                            <option value="1">3</option>
-                                            <option value="1">4</option>
-                                        </select>
-                                        -
-                                        <input type="tel" title="전화번호 중간자리">
-                                        -
-                                        <input type="tel" title="전화번호 끝자리">
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk01">
-                                        <label for="chk01">문자 서비스 수신동의</label>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l"><label for="email">전자우편주소</label></th>
-                            <td class="input-group space">
-                                <div class="flex-ac">
-                                    <div class="flex-ac">
-                                        <input type="text" id="email" class="email-id">
-                                        @
-                                        <div class="flex-ac">
-                                            <input type="text" class="email">
-                                            <select>
-                                                <option value="none">직접입력</option>
-                                                <option value="1">2</option>
-                                                <option value="1">3</option>
-                                                <option value="1">4</option>
-                                            </select> 
-                                        </div>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk02">
-                                        <label for="chk02">전자우편 수신동의</label>
-                                    </div>                               
-                                </div>                         
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l">이의신청내용</th>
+                            <th class="txt-l">신청구분</th>
                             <td>
                                 <div class="row-gap">
                                     <div class="radio-box">
                                         <input type="radio" id="rd0101" name="rd01">
-                                        <label for="rd0101">선정/미선정</label>
+                                        <label for="rd0101">전체</label>
                                     </div>
                                     <div class="radio-box">
                                         <input type="radio" id="rd0102" name="rd01">
-                                        <label for="rd0102">사용중지</label>
+                                        <label for="rd0102">개명</label>
                                     </div>
                                     <div class="radio-box">
                                         <input type="radio" id="rd0103" name="rd01">
-                                        <label for="rd0103">회수/환수</label>
-                                    </div>
-                                    <div class="radio-box">
-                                        <input type="radio" id="rd0104" name="rd01">
-                                        <label for="rd0104">기타</label>
+                                        <label for="rd0103">개번</label>
                                     </div>
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l"><label for="date01">처분이 있음을 안 연월일</label></th>
-                            <td>
-                                <input type="date" id="date01" placeholder="">
-                            </td>
+                            <th class="txt-l">변경 전 성명</th>
+                            <td><input type="text" value="홍길동" class="fixed-value" readonly /></td>
                         </tr>
                         <tr>
-                            <th class="txt-l"><label for="date02">처분통지를 받은 경우 통지를 받은 연월일</label></th>
-                            <td>
-                                <input type="date" id="date02" placeholder="">
-                            </td>
+                            <th class="txt-l must-type">변경 후 성명</th>
+                            <td><input type="text" value="" class="fixed-value" /></td>
                         </tr>
                         <tr>
-                            <th class="txt-l"><label for="cont01">처분의 내용 또는 통지된 사항</label></th>
+                            <th class="txt-l">변경 전 주민등록번호</th>
                             <td>
-                                <div class="txt-box">                                    
-                                    <textarea id="cont01" class="box"></textarea>
+                                <div class="input-reset">
+                                    <input type="number" value="000101" size="6" readonly />
+                                    <span>-</span>
+                                    <input type="number" value="3******" size="7" readonly />
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l"><label for="cont02">이의신청 취지 및 사유</label></th>
+                            <th class="txt-l must-type">변경 후 주민등록번호</th>
                             <td>
-                                <div class="txt-box">                                    
-                                    <textarea id="cont02" class="box"></textarea>
+                                <div class="input-idNum">
+                                    <input type="number" value="" />
+                                    <span>-</span>
+                                    <input type="number" value="" />
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">첨부파일</th>
+                            <th class="txt-l">변경희망일</th>
+                            <td><input type="date" id="date01"></td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">파일첨부</th>
                             <td>
-                                <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value" readonly>
+                                <div class="filebox flex-ac fixed-value">
+                                    <input class="upload-name fixed-value readonly-txt" readonly="">
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
-                                <p class="bullet-txt">pdf 또는 jpg 파일만 첨부가 가능합니다</p>
-                                <button type="button" class="file-reset btns bg-blue">초기화</button>
+                                <p class="bullet-txt">증빙자료가 있는 경우 첨부파일 탑재(호적변경의 경우 증빙자료 필수)</p>
+                                <p class="bullet-txt">HWP, PDF, IMG, ZIP 파일 형식만 업로드 가능</p>
                             </td>
                         </tr>
                     </tbody>
