--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -166,8 +166,7 @@
                             <a href="LAP_100.html">
                                 <span class="ico"></span>
                                 <div class="main-info-group">
-                                    <span class="main-info-tit">이용권 신청</span>
-                                    <span class="main-info-mo-desc sm-show-800">평생교육이용권을 <br>사용해보세요</span>
+                                    <span class="main-info-tit">평생교육<br class="sm-show-800">이용권 신청</span>
                                 </div>
                             </a>
                         </div>
@@ -175,8 +174,7 @@
                             <a href="LUP_001.html">
                                 <span class="ico"></span>
                                 <div class="main-info-group">
-                                    <span class="main-info-tit">사용기관 안내</span>                            
-                                    <span class="main-info-mo-desc sm-show-800">평생교육이용권 <br>사용처를 확인해보세요</span>
+                                    <span class="main-info-tit">사용기관<br class="sm-show-800">안내</span>                            
                                 </div>
                             </a>
                         </div>
@@ -233,8 +231,7 @@
                 <div class="more-link-area">
                     <a href="LGP_001.html" class="more-link-ticket">
                         <span>
-                            평생교육<br class="lg-only">
-                            이용권<br class="sm-show-800">이란?     
+                            평생교육이용권<br class="sm-show-800">이란?     
                         </span>
                         <span class="ico"></span>
                     </a>
